--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,9 @@
         }
     },
     "autoload": {
+        "files": [
+            "app/Helpers/xml.php"
+        ],
         "psr-4": {
             "App\\": "app/"
         },
